# swps_ai_agents_for_bpi

./: README.md  Whitepaper.docx  docker-compose.yml  pyproject.toml
etl/: extract.py  load.py  pipeline.py  transform.py
init/: init.sql
process_analysis_engine/: analysis_utils.py  data_utils.py
src/swps_ai_agents_for_bpi/: crew.py  main.py
src/swps_ai_agents_for_bpi/config/: agents.yaml  tasks.yaml
testdata/unstructured_data/: bad_structured.txt  good_structured.txt  query_case.txt  semi_good_structured.txt  semi_good_structured_2.txt  semi_good_structured_3.txt  typical_business_case.txt  very_good_structured.txt
testdatabase/: test_mongodb.py  test_postgres.py
