[project]
name = "swps_ai_agents_for_bpi"
version = "0.1.0"
description = "SWPS_AI_Agents_for_BPI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
swps_ai_agents_for_bpi = "swps_ai_agents_for_bpi.main:run"
run_crew = "swps_ai_agents_for_bpi.main:run"
train = "swps_ai_agents_for_bpi.main:train"
replay = "swps_ai_agents_for_bpi.main:replay"
test = "swps_ai_agents_for_bpi.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
